--- a/backend/CMakeLists.txt
+++ b/backend/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(backend
     src/server/server.cpp 
     src/base64/base64.cpp
     src/detector/face_detector.cpp
+    src/embedder/face_embedder.cpp
 )
 
 target_include_directories(backend PRIVATE ${CPPREST_INCLUDE_DIR} src)
