refactor : refining dockers setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -68,5 +68,9 @@ RUN git clone https://github.com/facebookresearch/faiss.git /tmp/faiss && \
     make -C build install && \
     rm -rf /tmp/faiss
 
+RUN mkdir -p /app/models && \
+    wget -q "https://github.com/onnx/models/raw/main/validated/vision/body_analysis/arcface/model/arcfaceresnet100-8.onnx" \
+    -O /app/models/arcfaceresnet100-8.onnx
+
 WORKDIR /app
 CMD ["tail", "-f", "/dev/null"]
