fix : copy the entire WS to image

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -73,8 +73,6 @@ RUN mkdir -p /app/models/embedding/ && \
 
 WORKDIR /app
 
-COPY src /app/src
-
-COPY models /app/models
+COPY . /app
 
 CMD ["tail", "-f", "/dev/null"]
